--- a/public/popup.html
+++ b/public/popup.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="popup.css" />
     <meta charset="UTF-8" />
     <title>Popup</title>
   </head>
   <body>
     <div id="root"></div>
+    <div id="portal"></div>
     <script type="module" src="popup.js"></script>
   </body>
 </html>
