Init: Boilerplate of the project

--- a/public/popup.html
+++ b/public/popup.html
@@ -3,11 +3,10 @@
   <head>
     <link rel="stylesheet" href="popup.css" />
     <meta charset="UTF-8" />
-    <title>Popup</title>
+    <title>DozeTab</title>
   </head>
-  <body>
+  <body class="min-w-md min-h-[400px]">
     <div id="root"></div>
-    <div id="portal"></div>
     <script type="module" src="popup.js"></script>
   </body>
 </html>
