--- a/public/popup.html
+++ b/public/popup.html
@@ -3,9 +3,23 @@
   <head>
     <link rel="stylesheet" href="popup.css" />
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DozeTab</title>
+    <style>
+      body {
+        width: 400px;
+        min-height: 500px;
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+      }
+      #root {
+        width: 100%;
+        height: 100%;
+      }
+    </style>
   </head>
-  <body class="min-w-md min-h-[400px]">
+  <body>
     <div id="root"></div>
     <script type="module" src="popup.js"></script>
   </body>
