--- a/public/popup.html
+++ b/public/popup.html
@@ -7,8 +7,8 @@
     <title>DozeTab</title>
     <style>
       body {
-        width: 400px;
-        min-height: 500px;
+        width: 650px;
+        height: 500px;
         margin: 0;
         padding: 0;
         overflow: hidden;
